<resources xmlns:tools="http://schemas.android.com/tools">
    <string name="app_label" translatable="false">WebDAV</string>
    <string name="app_name_release" translatable="false">WebDAV Provider</string>
    <string name="app_name_debug" translatable="false" tools:ignore="UnusedResources">WebDAV Provider (Debug)</string>
    <string name="action_about">About</string>
    <string name="action_save">Save</string>
    <string name="action_edit">Edit</string>
    <string name="action_delete">Delete</string>
    <string name="action_details">Details</string>
    <string name="action_copy">Copy</string>

    <string name="ok">OK</string>
    <string name="yes">Yes</string>
...
